# image-semantic-search

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  pyproject.toml
src/ai_image_indexer/: __init__.py  __main__.py  cli.py  config.py
src/ai_image_indexer/cloudflare/: __init__.py  client.py  setup.py
src/ai_image_indexer/database/: __init__.py  repository.py  schema.py
src/ai_image_indexer/indexer/: __init__.py  pipeline.py
src/ai_image_indexer/scanner/: __init__.py  scanner.py  system_paths.py
src/ai_image_indexer/search/: __init__.py  engine.py
tests/: test_database.py  test_scanner.py  test_search.py  test_setup.py  test_system_paths.py
