[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-image-indexer"
version = "0.1.0"
description = "Local-first intelligent image indexing with Cloudflare Workers AI and semantic search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AI Image Indexer Contributors" }]
keywords = ["image-search", "semantic-search", "cloudflare", "workers-ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
image-indexer = "ai_image_indexer.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/ai-image-indexer"
Documentation = "https://github.com/your-org/ai-image-indexer#readme"
Repository = "https://github.com/your-org/ai-image-indexer"
Issues = "https://github.com/your-org/ai-image-indexer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_image_indexer"]

[tool.hatch.build.targets.sdist]
include = ["src/ai_image_indexer", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
